[gd_scene load_steps=8 format=2]

[ext_resource path="res://HUD.tscn" type="PackedScene" id=1]
[ext_resource path="res://Main.gd" type="Script" id=2]
[ext_resource path="res://Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://Mobs.tscn" type="PackedScene" id=4]
[ext_resource path="res://art/game-over.wav" type="AudioStream" id=5]
[ext_resource path="res://art/house-in-a-forest-loop.ogg" type="AudioStream" id=6]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 480, 0, 0, 0, 0, 0, 480, 720, 0, 0, 0, 0, 0, 720, 0, 0, 0, 0, 0, 0 )
}

[node name="Main" type="Node"]
script = ExtResource( 2 )
mob_scene = ExtResource( 4 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.227451, 0.352941, 0.439216, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MobPath2D" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="MobPathLocation" type="PathFollow2D" parent="MobPath2D"]

[node name="Player" parent="." instance=ExtResource( 3 )]
position = Vector2( 240, 362 )

[node name="HUD" parent="." instance=ExtResource( 1 )]

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="ScoreTimer" type="Timer" parent="."]

[node name="StartTimer" type="Timer" parent="."]
one_shot = true

[node name="StartPosition2D" type="Position2D" parent="."]
position = Vector2( 240, 362 )
__meta__ = {
"_gizmo_extents_": 130.5
}

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="DeadSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[connection signal="hit" from="Player" to="." method="_on_Player_hit"]
[connection signal="start_game" from="HUD" to="." method="new_game"]
[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_ScoreTimer_timeout"]
